# safeclaw

./: pyproject.toml
.agents/skills/testing-ai-pipeline/: SKILL.md
config/: config.yaml
scripts/: train_lora.py
src/safeclaw/: cli.py
src/safeclaw/actions/: ai_coder.py  ai_dev.py  bug_finder.py  deployer.py
src/safeclaw/core/: ai_writer.py  parser.py  transformers_provider.py
tests/: test_ai_pipeline.py  test_transformers_provider.py
web/: main.py  pyproject.toml
web/static/: index.html
