[project]
name = "safeclaw-web"
version = "1.0.0"
description = "SafeClaw AI Code Generator - Web Interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
